Bug 324348 firefox window appears initially at small size and then resizes r+sr=roc